--- a/SuperMarkIt/assets/homepage-styles.css
+++ b/SuperMarkIt/assets/homepage-styles.css
@@ -1,83 +1,44 @@
-body{
-  margin-left: 0;
-  margin-top: 0;
-  overflow-x: hidden;
+.site-description h2{
+  color: #2A7FFD;
+  background-color: ;
+  font-family: arial;
+  font-size: 4em;
+  text-shadow: 2px 2px black;
+  margin-top: 0px;
 }
 
-header{
-  width: 100vw;
-  height: 100px;
-  background-color: #C0C5CF;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  border-bottom: 3px solid #064FAF;
-}
-
-nav{
-  justify-self: end;
-}
-
-nav li{
-  margin-top: 30px;
-  display: inline-block;
-}
-
-
-.tag-login{
-  margin-right: 10px;
-  font-size: 1.2em;
-  border: 3px solid black;
-  padding: 5px;
-  border-radius: 15px;
+.site-description p{
   color: black;
-  font-style: normal;
-  background-color: #F5F7FB;
-  font-family: Verdana;
-  text-decoration: none;
+  font-family: arial;
+  font-size: 1.5em;
+  ;
 }
 
-li button{
-  margin-right: 30px;
-  margin-bottom: 30px;
-  padding: 5px;
+.site-description{
+  background: rgba(153, 160, 171, 0.7);
+  opacity: 1;
+  padding: 15px;
+  transition-duration: 1s;
+  border-radius: 3px;
+}
+
+.site-description:hover {
+  /* The 4th value is opacity*/
+  background: rgba(101, 102, 104, 0.9);
+  padding: 50px;
+  border-radius: 8px;
+  transition-duration: 1s;
+}
+
+.tag-about{
   font-size: 1.2em;
-  border-radius: 15px;
-  background-color: white;
-  color: black;
-  border: 2px solid #555555;
-  font-family: Verdana;
-}
-
-li button:hover{
-  background-color: #555555;
-  color: white;
-}
-
-.tag-register{
-  margin-right: 20px;
-  font-size: 1.2em;
-  border: 3px solid #02366D;
-  padding: 5px;
+  border: 1px solid #02366D;
+  padding: 9px;
   border-radius: 15px;
   color: black;
   text-decoration: none;
   background-color: #A9C0E3;
   font-family: Verdana;
-}
-
-.site-description h2{
-  color: lightgreen;
-  font-family: arial;
-  font-size: 4em;
-  text-shadow: 2px 2px black;
-}
-
-.site-description p{
-  color: white;
-  font-family: arial;
-  font-size: 1.5em;
-  text-shadow: 2px 2px black;
-
 }
 
 .hero {
@@ -98,4 +59,10 @@ li button:hover{
   background-position: relative;
   background-repeat: no-repeat;
   background-attachment: fixed;
+}
+
+*body{
+  margin-left: 0;
+  margin-top: 0;
+  overflow-x: hidden;
 }
