css improvements to category and product pages. Add category images.

--- a/SuperMarkIt/assets/homepage-styles.css
+++ b/SuperMarkIt/assets/homepage-styles.css
@@ -54,7 +54,7 @@
   text-align: center;
 
   /* Background styles */
-  background-image: url(hero-image1.jpg);
+  background-image: url(hero-homepage.jpg);
   background-size: cover;
   background-position: relative;
   background-repeat: no-repeat;
