--- a/SuperMarkIt/assets/products/categories-page.css
+++ b/SuperMarkIt/assets/products/categories-page.css
@@ -1,4 +1,3 @@
-
 .Categories {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -6,9 +5,45 @@
 }
 
 .category {
-  background: #bcbcbc;
+  background: #7da2c7;
   padding: 10px;
-  border: 2px solid #92364e;
+  border: 2px solid #656566;
+  border-radius: 4px;
+}
+
+.thumbnails{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 6px;
+  transition-duration: 0.5s;
+}
+
+.category:hover .thumbnails{
+  border-radius: 100px;
+  transition-duration: 0.5s;
+}
+
+.category:hover .category-name{
+  background: lightblue;
+  padding: 10px;
+  border: 1px solid white;
+  border-radius: 3px;
+  font-size: 24px;
+  transition-duration: 0.3s;
+}
+
+
+.category-name{
+  text-decoration: none;
+  color: black;
+  font-size: 20px;
+  transition-duration: 0.3s;
+}
+
+
+.Categories h5{
+  text-align: center;
 }
 
 
