--- a/SuperMarkIt/products/templates/products/main_products.html
+++ b/SuperMarkIt/products/templates/products/main_products.html
@@ -14,7 +14,7 @@
     {% for product in products %}
       <div class="product">
         <img src="{{product.thumbnail.url}}" class="thumbnails">
-        <h5><a href="#">{{product.name}}</a></h5>
+        <h5>{{product.name}}</h5>
           <span class="Tesco">Tesco:</span>
             <span class="product-price"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                £{{product.price_tesco}}</span><br>
@@ -23,11 +23,10 @@
           <span class="Morrisons">Morrisons:</span>
             <span class="product-price"> &nbsp;&nbsp;&nbsp;
                £{{product.price_morrisons}}</span><br>
-        <button type="button" class="btn-add-to-basket">Add to Basket</button>
-        <li><a href="{% url 'basket:update' product.slug %}" class="tag-basket">Basket</a></li>
+        <br>
         <form class="attibute-qty" action="{% url 'basket:update' product.slug %}" method="GET">
-          <input type="number" name="quantity" placeholder="0" min="0" oninput="this.value = Math.abs(this.value)">
-          <input type="submit" value="Add to Basket">
+          <span class="units-qty">Quantity: </span><input type="number" name="quantity" placeholder="1" min="1" max="8" oninput="this.value = Math.abs(this.value)">
+          <button type="submit" class="btn-add-to-basket"><span>Add to Basket</span></button>
         </form>
       </div>
     {% endfor %}
