--- a/SuperMarkIt/products/templates/products/categories.html
+++ b/SuperMarkIt/products/templates/products/categories.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="{% static 'products/categories-page.css '%}">
   </head>
-  <h1>this is the main category page</h1>
+  <h1>Categories</h1>
   <div class="Categories">
 
     {% for category in categories %}
