--- a/SuperMarkIt/products/templates/products/main_products.html
+++ b/SuperMarkIt/products/templates/products/main_products.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="{% static 'products/products-page.css' %}">
 </head>
 
-  <h1>this is the main products page</h1>
+  <h1>All Products</h1>
   <div class="Products">
 
     {% for product in products %}
