--- a/SuperMarkIt/templates/homepage.html
+++ b/SuperMarkIt/templates/homepage.html
@@ -17,5 +17,6 @@
         <a href="{% url 'about' %}" class="tag-about">Find Out More!</a>
       </div>
     </section>
+    <span class="created-by"><p>Created by Ramon Williams</p></span>
   </body>
 {% endblock %}
