updated styles, basket models and basket table to include everything

--- a/SuperMarkIt/accounts/assets/accounts/login-page.css
+++ b/SuperMarkIt/accounts/assets/accounts/login-page.css
@@ -9,11 +9,86 @@
 
   /* Text styles */
   text-align: center;
-  
+
   /* Background styles */
-  background-image: url(accounts/hero-image2.jpg);
+  background-image: url(hero-image2.jpg);
   background-size: cover;
   background-position: relative;
   background-repeat: no-repeat;
   background-attachment: fixed;
+}
+
+.site-description {
+  max-width: 500px;
+	background: #d0eaf2;
+	margin: 10px auto;
+	padding: 40px;
+	border-radius: 8px;
+  border: 4px solid black;
+}
+
+.site-description h2{
+  border: 2px solid black;
+  color: white;
+  border-radius: 8px;
+  background: #2A7FFD;
+  padding: 8px;
+  margin: -4px -4px 4px -4px;
+}
+
+.fieldWrapper{
+  padding: 8px;
+  font-weight: bold;
+}
+
+
+.label-value{
+  color: red;
+}
+
+.btn-login-auth{
+  background-color: #2A7FFD; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1.2em;
+  border-radius: 6px
+}
+
+
+.btn-login-auth span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.3s;
+}
+
+.btn-login-auth span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.3s;
+  font-weight: bold;
+}
+
+.btn-login-auth:hover span {
+  padding-right: 25px;
+}
+
+.btn-login-auth:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+.site-description p{
+  font-size: 8px;
+  margin: 0;
+  position: fixed;
+  right: 0;
+  bottom: 0;
 }
