--- a/SuperMarkIt/assets/basket/basket-page.css
+++ b/SuperMarkIt/assets/basket/basket-page.css
@@ -1,7 +1,6 @@
 .heading-basket{
-  color: blue;
+  color: Black;
   font-family: monospace;
-  font-style: italic;
 }
 
 table {
@@ -10,12 +9,64 @@ table {
   width: 100%;
 }
 
-td, th {
+
+th{
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 5px;
+  font-size: 1.2em;
+}
+
+/*.tesco-hdr{
+  color: #00539F
+}
+
+.sainsburys-hdr{
+  color: #FC8019
+}
+
+.morrisons-hdr{
+  color: #00563F;
+}*/
+
+td{
   border: 1px solid #dddddd;
   text-align: left;
   padding: 3px;
+  font-size: 1.1em;
 }
 
 tr:nth-child(even) {
-  background-color: #dddddd;
+  background-color: #cadbfc;
+  border-top: 1px solid red;
+  border-bottom: 1px solid red;
+}
+
+tfoot{
+  font-size: 1.1em;
+  font-weight: bold;
+  font-style: oblique;
+}
+
+.remove-from-basket{
+  padding: 2px;
+  font-weight: bolder;
+  color: #5e1501;
+  font-family: arial;
+  font-style: oblique;
+  text-decoration: none;
+  transition-duration: 0.3s;
+}
+
+.remove-from-basket:hover{
+  padding: 3px;
+  border-radius: 8px;
+  color: white;
+  background-color: red;
+  transition-duration: 0.3s;
+}
+
+.remove-from-basket:hover:after{
+  content: '\2718';
+  margin-left: 5px;
 }
