--- a/SuperMarkIt/products/templates/products/categories.html
+++ b/SuperMarkIt/products/templates/products/categories.html
@@ -4,6 +4,7 @@
 {% block content %}
   <head>
     <meta charset="utf-8">
+    <title>Categories</title>
     <link rel="stylesheet" href="{% static 'products/categories-page.css '%}">
   </head>
   <h1>Categories</h1>
