--- a/SuperMarkIt/assets/accounts/login-page.css
+++ b/SuperMarkIt/assets/accounts/login-page.css
@@ -20,18 +20,18 @@
 
 .site-description {
   max-width: 500px;
-	background: #f4f7f8;
+	background: #d0eaf2;
 	margin: 10px auto;
 	padding: 40px;
-	background: #f4f7f8;
 	border-radius: 8px;
   border: 4px solid black;
 }
 
 .site-description h2{
   border: 2px solid black;
+  color: white;
   border-radius: 8px;
-  background: green;
+  background: #2A7FFD;
   padding: 8px;
   margin: -4px -4px 4px -4px;
 }
@@ -47,14 +47,14 @@
 }
 
 .btn-login-auth{
-  background-color: #4CAF50; /* Green */
+  background-color: #2A7FFD; /* Green */
   border: none;
   color: white;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 1.2em;
   border-radius: 6px
 }
 
