--- a/SuperMarkIt/products/templates/products/categories/filter.html
+++ b/SuperMarkIt/products/templates/products/categories/filter.html
@@ -1,18 +1,19 @@
 {% extends 'base_layout.html' %}
+{% load static from staticfiles %}
 
-{% block title %}{{ category.name }}{% endblock %}
 
 {% block content %}
 
   <title>{{category.name}}</title>
   <h1>{{category.name}}</h1>
   <h1>{{product.category}}</h1>
+  <link rel="stylesheet" href="{% static 'products/filtered-products.css' %}">
   <div class="Products">
 
     {% for product in product_query_set %}
       <div class="product">
         <img src="{{product.thumbnail.url}}" class="thumbnails">
-        <h5><a href="#">{{product.name}}</a></h5>
+        <h5>{{product.name}}</h5>
           <span class="Tesco">Tesco:</span>
             <span class="product-price"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                £{{product.price_tesco}}</span><br>
@@ -21,11 +22,10 @@
           <span class="Morrisons">Morrisons:</span>
             <span class="product-price"> &nbsp;&nbsp;&nbsp;
                £{{product.price_morrisons}}</span><br>
-        <button type="button" class="btn-add-to-basket">Add to Basket</button>
-        <li><a href="{% url 'basket:update' product.slug %}" class="tag-basket">Basket</a></li>
+        <br>
         <form class="attibute-qty" action="{% url 'basket:update' product.slug %}" method="GET">
-          <input type="number" name="quantity" placeholder="0" min="0" oninput="this.value = Math.abs(this.value)">
-          <input type="submit" value="Add to Basket">
+          <span class="units-qty">Quantity: </span><input type="number" name="quantity" placeholder="1" min="1" max="8" oninput="this.value = Math.abs(this.value)">
+          <button type="submit" class="btn-add-to-basket"><span>Add to Basket</span></button>
         </form>
       </div>
     {% endfor %}
