--- a/SuperMarkIt/accounts/templates/accounts/login.html
+++ b/SuperMarkIt/accounts/templates/accounts/login.html
@@ -1,5 +1,5 @@
 {% extends 'base_layout.html' %}
-{% load static from staticfiles %}
+{% load static %}
 
 {% block content %}
   <title>Login</title>
